--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,12 @@
       <version>42.3.6</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>5.3.20</version>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -116,14 +122,6 @@
       </plugins>
     </pluginManagement>
       <plugins>
-<!--          <plugin>-->
-<!--              <groupId>org.apache.maven.plugins</groupId>-->
-<!--              <artifactId>maven-compiler-plugin</artifactId>-->
-<!--              <configuration>-->
-<!--                  <source>14</source>-->
-<!--                  <target>14</target>-->
-<!--              </configuration>-->
-<!--          </plugin>-->
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
