Spring Data JPA 1/2

--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -5,5 +5,5 @@ hibernate.connection.username=postgres
 hibernate.connection.password=postgres
 
 # Hibernate config
-hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
+hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql=true
