--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,15 @@
       <artifactId>spring-data-jpa</artifactId>
       <version>2.4.7</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.24</version>
+      <scope>provided</scope>
+    </dependency>
+
   </dependencies>
 
 
